add adavtive layout (part) and confidential

--- a/index-german.html
+++ b/index-german.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>турбо-авто-сервіс</title>
+    <title>turboautoservice</title>
     <!-- FAVICON  -->
     <link
       rel="icon"
@@ -42,16 +42,15 @@
       <div class="container header-container">
         <nav class="nav">
           <ul class="list nav-list">
-            <li><a href="#benefits" class="link link-header">Переваги</a></li>
-            <li><a href="" class="link link-header">Клієнти</a></li>
-            <li><a href="" class="link link-header">Працівники</a></li>
-            <li><a href="" class="link link-header">Про нас</a></li>
+            <li><a href="#benefits" class="link link-header">Vorteile</a></li>
+            <li><a href="" class="link link-header">Kunden</a></li>
+            <li><a href="" class="link link-header">Mitarbeiter</a></li>
+            <li><a href="" class="link link-header">Über uns</a></li>
           </ul>
         </nav>
-
-        <ul class="list list-lang">
-          <li><a href="" class="link link-lang disabled">uk</a></li>
-          <li><a href="./index-german.html" class="link link-lang enabled">de</a></li>
+         <ul class="list list-lang">
+          <li><a href="./index.html" class="link link-lang enabled">uk</a></li>
+          <li><a href="./index-german.html" class="link link-lang disabled">de</a></li>
         </ul>
         <a href="" class="link link-logo">Logo</a>
         <ul class="list list-communication">
@@ -62,7 +61,6 @@
             </a>
           </li>
         </ul>
-
         <button
           type="button"
           class="mobile-button menu-toggle js-open-menu"
@@ -77,38 +75,36 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">
-            Більше ніж автосервіс!
+            Mehr als ein Autoservice!
             <span class="after-title"
-              >Якісне обладнання, професіонали авторемонту, індивідуальний
-              підхід до кожного клієнта.</span
+              >Qualitätsausrüstung, Autoreparaturfachleute, individuelle Annäherung zu jedem Klienten.</span
             >
           </h1>
           <!-- <img
             src="./images/2048x2048.jpg"
-            alt="фонове зображення"
+          
             width="100"
             height="100"
           /> -->
-          <a href="" class="link link-hero">Форма захвату</a>
+          <a href="" class="link link-hero german-hero">Form der Erfassung</a>
         </div>
       </section>
       <!-- ПЕРЕВАГИ  -->
       <section class="benefits"  id="benefits">
         <div class="container">
-          <h2 class="title">Наші переваги</h2>
+          <h2 class="title">Unsere Vorteile</h2>
           <ul class="list list-benefits">
             <li class="item-benefits">
               <div class="img-text">
                 <img
                   src="./images/2048x2048.jpg"
-                  alt="якісне виконання роботи"
+                  alt="Qualität der Arbeitsleistung"
                   width="450"
                   height="450"
                   class="benefits-img"
                 />
                 <p class="benefits-text">
-                  Професіоналізм компанії: Кваліфіковані спеціалісти завжди
-                  готові надати якісні послуги нашим клієнтам з гарантією.
+                  Professionalität des Unternehmens: Qualifizierte Spezialisten sind immer bereit, unseren Kunden qualitativ hochwertige Dienstleistungen mit einer Garantie zu bieten.
                 </p>
               </div>
             </li>
@@ -116,14 +112,13 @@
               <div class="img-text">
                 <img
                   src="./images/2048x2048.jpg"
-                  alt="якісне виконання роботи"
+                  alt="Qualität der Arbeitsleistung"
                   width="450"
                   height="450"
                   class="benefits-img"
                 />
                 <p class="benefits-text">
-                  Швидка підтримка: Кожного дня в нас працює контакт-центр для
-                  консультації та записів наших клієнтів.
+                  Schnelle Unterstützung: Jeden Tag haben wir ein Kontaktcenter für die Beratung und Aufzeichnungen unserer Kunden.
                 </p>
               </div>
             </li>
@@ -131,65 +126,63 @@
               <div class="img-text">
                 <img
                   src="./images/2048x2048.jpg"
-                  alt="якісне виконання роботи"
+                  alt="Qualität der Arbeitsleistung"
                   width="450"
                   height="450"
                   class="benefits-img"
                 />
                 <p class="benefits-text">
-                  Швидкість виконання: Ми прагнемо оптимізувати процес
-                  покращення Вашого авто і прагнемо надати послуги не тільки
-                  високоякісно, але й швидко.
+                  Geschwindigkeit der Ausführung: Wir bemühen uns, den Prozess der Verbesserung Ihres Autos zu optimieren und bemühen sich, Dienstleistungen nicht nur qualitativ hochwertig, sondern auch schnell zu erbringen.
                 </p>
               </div>
             </li>
           </ul>
-          <button type="button" class="button">Кнопка наші переваги</button>
+          <button type="button" class="button">Unsere Vorteile anklicken</button>
         </div>
       </section>
-      <!-- КЛІЄНТИ  -->
+      <!-- KUNDEN  -->
       <section class="our-customers">
         <div class="container">
-          <h2 class="title">Наші клієнти</h2>
+          <h2 class="title">Unsere Kunden</h2>
           <ul class="list customers-list">
             <li class="customers-item">
               <p class="customers-quantity" data-target="4978">4978+</p>
-              <h3 class="customers-subtitle">Задоволених клієнтів</h3>
+              <h3 class="customers-subtitle">Zufriedene Kunden</h3>
             </li>
             <li class="customers-item">
               <p class="customers-quantity" data-target="20967">20967+</p>
               <h3 class="customers-subtitle">
-                Кількість відремонтованих автомобілів
+                Anzahl der reparierten Fahrzeuge
               </h3>
             </li>
             <li class="customers-item">
               <p class="customers-quantity" data-target="53">53+</p>
-              <h3 class="customers-subtitle">Кількість робіт кожного дня</h3>
+              <h3 class="customers-subtitle">Anzahl der Werke pro Tag</h3>
             </li>
             <li class="customers-item">
               <p class="customers-quantity" data-target="118">118+</p>
               <h3 class="customers-subtitle">
-                К-сть клієнтів, які нас рекомендують
+                Anzahl der Kunden, die uns empfehlen
               </h3>
             </li>
           </ul>
         </div>
       </section>
-      <!-- ПРАЦІВНИКИ  -->
+      <!-- Mitarbeiter  -->
       <section class="our-employees">
         <div class="container">
-          <h2 class="title">Наші кращі працівники</h2>
+          <h2 class="title">Unsere besten Mitarbeiter</h2>
           <div class="images-slider swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="item-employees">
                   <img
                     src="./images/2048x2048.jpg"
-                    alt="Андрій Слісаренко"
+                    alt="Andriy Slisarenko"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Працівник з 10-річним досвідом у ремонті ходової частини
+                    Mitarbeiter mit 10-jähriger Erfahrung in der Reparatur von Fahrwerken
                   </p>
                 </div>
               </div>
@@ -197,12 +190,11 @@
                 <div class="item-employees">
                   <img
                     src="./images/2048x2048.jpg"
-                    alt="Богдан Степаненко"
+                    alt="Bogdan Stepanenko"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Працівник на посаді механік з 7-річним досвідом у даній
-                    сфері
+                    Mitarbeiter in der Position des Mechaniker mit 7 Jahren Erfahrung auf diesem Gebiet
                   </p>
                 </div>
               </div>
@@ -210,11 +202,11 @@
                 <div class="item-employees">
                   <img
                     src="./images/2048x2048.jpg"
-                    alt="Василь Петренко"
+                    alt="Vasyl Petrenko"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Займається форбуванням корпусу авто понад 6 років
+                    Beschäftigt in der Schmiede der Karosserie des Autos für mehr als 6 Jahre
                   </p>
                 </div>
               </div>
@@ -222,12 +214,11 @@
                 <div class="item-employees">
                   <img
                     src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
+                    alt="Oleg Vasilenko"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
+         Mitarbeiter, die mit 12 Jahren Erfahrung in der Motorenreparatur tätig sind
                   </p>
                 </div>
               </div>
@@ -235,12 +226,11 @@
                 <div class="item-employees">
                   <img
                     src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
+                    alt="Oleg Vasilenko"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
+                    Mitarbeiter, die mit 12 Jahren Erfahrung in der Motorenreparatur tätig sind
                   </p>
                 </div>
               </div>
@@ -248,96 +238,88 @@
                 <div class="item-employees">
                   <img
                     src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
+                    alt="Oleg Vasilenko"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
+                  Mitarbeiter, die mit 12 Jahren Erfahrung in der Motorenreparatur tätig sind
                   </p>
                 </div>
               </div>
-
               <div class="swiper-slide">
                 <div class="item-employees">
                   <img
                     src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
+                    alt="Oleg Vasilenko"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
+                   Mitarbeiter, die mit 12 Jahren Erfahrung in der Motorenreparatur tätig sind
                   </p>
                 </div>
               </div>
             </div>
           </div>
-          <button type="button" class="button">Кнопка наші працівники</button>
+          <button type="button" class="button">Button unsere Mitarbeiter</button>
         </div>
       </section>
       <!-- ПРО НАС  -->
       <section class="about-us">
         <div class="container">
-          <h2 class="title">Про нас</h2>
+          <h2 class="title">Über uns</h2>
           <p class="about-description">
-            Детейлінг центр “назва” - лідер у сфері ремонтних та детейлінгових
-            послуг для вашого авто. Наші професіонали надають детальну
-            консультацію по догляду за автомобілем та усунення естетичних
-            недоліків. Досвідчені майстри допомагають підтримувати технічну та
-            візуальну складову авто наших клієнтів у відмінному стані не тільки
-            зовнішньо, але й внутрішньо. Чому обирають саме нашу студію? Ми
-            віримо в якісний догляд за вашим авто! Захоплення автомобілями для
-            нас — це не просто робота, а справжня пристрасть, тому ми досконало
-            знаємо, як забезпечити найкращий сервіс. Дотримання термінів — наш
-            пріоритет, і завдяки системі попереднього запису ви завжди отримуєте
-            своє авто вчасно. Ми приділяємо увагу кожній дрібниці, викладаємося
-            на всі 110% і робимо все, щоб ваш автомобіль виглядав бездоганно.
+          Deteiling-Zentrum "name" - ein Marktführer im Bereich der Reparatur und Deteiling
+Dienstleistungen für Ihr Auto. Unsere Fachleute bieten detaillierte
+Beratung zur Autopflege und Beseitigung von Ästhetik
+Nachteile. Erfahrene Handwerker helfen, die technische und visuelle Komponente der Autos unserer Kunden in ausgezeichnetem Zustand zu halten, nicht nur
+extern, aber auch intern. Warum sollten wir uns für unser Studio entscheiden? Wir
+wir glauben an Qualitätspflege für Ihr Auto! Leidenschaft für Autos ist für uns nicht nur ein Job, sondern eine echte Leidenschaft, so sind wir perfekt
+Wir wissen, wie man den besten Service bietet. Die Einhaltung von Fristen ist unsere Priorität und dank des Terminsystems erhalten Sie Ihr Auto immer pünktlich. Wir achten auf jedes Detail, geben alles zu 110% und tun alles, damit Ihr Auto perfekt aussieht.
           </p>
           <p class="text-head">
-            Контакт керівника:
+            Kontakt des Managers:
             <a href="mailto:@serhii_khrystoiev" class="link-head"
               >@serhii_khrystoiev</a
             >
           </p>
           <img
             src="./images/глайсдорф.png"
-            alt="місце розташування"
+            alt="Lage"
             width="450px"
             height="248"
           />
         </div>
       </section>
-      <!-- ФОРМА  -->
+      <!-- Formular  -->
       <section class="connection-form">
         <div class="container">
           <form class="personal-data" autocomplete="on" name="connection_form">
             <strong class="title title-form"
-              >Виникли питання? Залиште свої дані</strong
+              >Haben Sie Fragen? Hinterlassen Sie Ihre Daten</strong
             >
             <label class="form-field">
-              <span class="label-form">Ім'я</span>
+              <span class="label-form">Name</span>
               <input
                 type="text"
                 name="user_name"
-                placeholder="Андрій"
+                placeholder="Andrew"
                 minlength="2"
                 required
-                title="Введіть не менше 2-х символів"
+                title="Bitte geben Sie mindestens 2 Zeichen ein"
                 class="form-input"
               />
             </label>
             <label class="form-field">
-              <span class="label-form">Телефон</span>
+              <span class="label-form">Telefon</span>
               <input
                 type="tel"
                 name="tel"
                 required
-                placeholder="+38(___)___-__-__"
-                pattern="^(\+38\(0\d{2}\)\d{3}-\d{2}-\d{2})$"
+                placeholder="+49(0__)___-____"
+                pattern="^\+49\(0\d{2}\)\d{3}-\d{4}$"
                 class="form-input"
             /></label>
-            <button type="submit" class="button button-form">Відправити</button>
+            <button type="submit" class="button button-form">Senden</button>
           </form>
         </div>
       </section>
@@ -346,12 +328,12 @@
       <div class="container">
         <a href="" class="link link-logo logo-footer">Logo</a>
         <p class="copyright">
-          &#169;Всі права захищені.
-          <a href="./politic-confidential.html" class="index-confidential">Політика конфіденційності</a>
+          &#169;Alle Rechte vorbehalten.
+          <a href="./politic-confidential-german.html" class="index-confidential">Datenschutzerklärung</a>
         </p>
       </div>
     </footer>
-    <!-- МОБІЛЬНЕ МЕНЮ  -->
+    <!-- MOBILE MENÜ  -->
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
         <svg width="20" height="20">
@@ -361,19 +343,19 @@
 
       <ul class="mobile-menu">
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Переваги</a>
+          <a href="" class="link mobile-menu-link">Vorteile</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Наші клієнти</a>
+          <a href="" class="link mobile-menu-link">Unsere Kunden</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Наші працівники</a>
+          <a href="" class="link mobile-menu-link">Unsere Mitarbeiter</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Про нас</a>
+          <a href="" class="link mobile-menu-link">Über uns</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="" class="link mobile-menu-link">Контакти</a>
+          <a href="" class="link mobile-menu-link">Kontaktdaten</a>
         </li>
       </ul>
     </div>
@@ -386,12 +368,7 @@
     <script src="./js/mobile-menu.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/jquery.inputmask.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $('input[name="tel"]').inputmask("+38(999)999-99-99");
-      });
-    </script>
-    <script src="./js/our-customers.js"></script>
+        <script src="./js/our-customers.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js"></script>
   </body>
