--- a/politic-confidential.html
+++ b/politic-confidential.html
@@ -38,15 +38,31 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
- <section class="confidential">
-    <div class="container">
-           <a href="./index.html" class="link link-back"> Назад</a>
-  <p class="confidential-text">ФОП Колісник Т.М. з повагою ставиться до конфіденційної інформації будь-якої особи, яка відвідує наш інтернет-сайт. Всі Ваші дані збираються, обробляються і використовуються у відповідності до вимог чинного законодавства України.​
-Ми збираємо інформацію, яка стосується наших клієнтів, з метою використання її для можливості надавати повного обсягу наших послуг, і лише в тому випадку, якщо Ви добровільно надали інформацію або висловили згоду на її використання. Ми зобов’язуємося не використовувати, не обробляти і не передавати таку інформацію у спосіб, що виходить за межі вимог чинного законодавства України. Передача персональних даних здійснюється виключно на підставі судового рішення або в іншому порядку, передбаченому чинним законодавством України.
-Збережені дані будуть видалені з бази даних ФОП Колісник Т.М. після збігання періоду зберігання, встановленого законодавством, або у випадку, якщо більше не потребує збереження тих або інших даних. Ви маєте право у будь-який час вимагати видалення інформації про Вас з бази даних . У таких випадках, а також, якщо у Вас виникають інші побажання, пов’язані з Вашими персональними даними, просимо Вас звернутися до наших менеджерів.
-</p>
-    </div>
- </section>
-    
+    <section class="confidential">
+      <div class="container">
+        <a href="./index.html" class="link link-back"> Назад</a>
+        <p class="confidential-text">
+          ФОП Колісник Т.М. з повагою ставиться до конфіденційної інформації
+          будь-якої особи, яка відвідує наш інтернет-сайт. Всі Ваші дані
+          збираються, обробляються і використовуються у відповідності до вимог
+          чинного законодавства України.​ Ми збираємо інформацію, яка стосується
+          наших клієнтів, з метою використання її для можливості надавати
+          повного обсягу наших послуг, і лише в тому випадку, якщо Ви
+          добровільно надали інформацію або висловили згоду на її використання.
+          Ми зобов’язуємося не використовувати, не обробляти і не передавати
+          таку інформацію у спосіб, що виходить за межі вимог чинного
+          законодавства України. Передача персональних даних здійснюється
+          виключно на підставі судового рішення або в іншому порядку,
+          передбаченому чинним законодавством України. Збережені дані будуть
+          видалені з бази даних ФОП Колісник Т.М. після збігання періоду
+          зберігання, встановленого законодавством, або у випадку, якщо більше
+          не потребує збереження тих або інших даних. Ви маєте право у будь-який
+          час вимагати видалення інформації про Вас з бази даних . У таких
+          випадках, а також, якщо у Вас виникають інші побажання, пов’язані з
+          Вашими персональними даними, просимо Вас звернутися до наших
+          менеджерів.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
