resized photos (slider) and html

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <li class="item-benefits">
               <div class="img-text">
                 <img
-                  src="./images/2048x2048.jpg"
-                  alt="якісне виконання роботи"
+                  src="./images/автомобіль.jpg"
+                  alt="автомобіль"
                   width="450"
                   height="450"
                   class="benefits-img"
@@ -115,8 +115,8 @@
             <li class="item-benefits">
               <div class="img-text">
                 <img
-                  src="./images/2048x2048.jpg"
-                  alt="якісне виконання роботи"
+                  src="./images/гайкові ключі.jpg"
+                  alt="гайкові ключі"
                   width="450"
                   height="450"
                   class="benefits-img"
@@ -130,8 +130,24 @@
             <li class="item-benefits">
               <div class="img-text">
                 <img
-                  src="./images/2048x2048.jpg"
-                  alt="якісне виконання роботи"
+                  src="./images/двигун.jpg"
+                  alt="двигун"
+                  width="450"
+                  height="450"
+                  class="benefits-img"
+                />
+                <p class="benefits-text">
+                  Швидкість виконання: Ми прагнемо оптимізувати процес
+                  покращення Вашого авто і прагнемо надати послуги не тільки
+                  високоякісно, але й швидко.
+                </p>
+              </div>
+            </li>
+             <li class="item-benefits">
+              <div class="img-text">
+                <img
+                  src="./images/частина двигуна.jpg"
+                  alt="xfcnbyf ldbueyf"
                   width="450"
                   height="450"
                   class="benefits-img"
@@ -184,76 +200,60 @@
               <div class="swiper-slide">
                 <div class="item-employees">
                   <img
-                    src="./images/2048x2048.jpg"
+                    src="./images/Андрій-Слісаренко.jpg"
                     alt="Андрій Слісаренко"
                     class="img-employees"
                   />
                   <p class="text-employees">
-                    Працівник з 10-річним досвідом у ремонті ходової частини
+                      Ремонт ходової частини з 10-м досвідом
                   </p>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="item-employees">
                   <img
-                    src="./images/2048x2048.jpg"
+                    src="./images/Богдан-Степаненко.jpg"
                     alt="Богдан Степаненко"
                     class="img-employees"
+                                     />
+                  <p class="text-employees">
+                    Механік з 7-річним досвідом                   </p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="item-employees">
+                  <img
+                    src="./images/Антуан-Жекович.jpg"
+                    alt="Антуан Жекович"
+                    class="img-employees"
+                                       />
+                  <p class="text-employees">
+                    Фарбування корпусу авто понад 6 років
+                  </p>
+                </div>
+              </div>
+                         <div class="swiper-slide">
+                <div class="item-employees">
+                  <img
+                    src="./images/Павло-Денисюк.jpg"
+                    alt="Павло Денисюк"
+                    class="img-employees"
+                     
                   />
                   <p class="text-employees">
-                    Працівник на посаді механік з 7-річним досвідом у даній
-                    сфері
+                    Ремонт двигуна з 8-м досвідом роботи
                   </p>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="item-employees">
                   <img
-                    src="./images/2048x2048.jpg"
-                    alt="Василь Петренко"
+                    src="./images//Назар-Коваль.jpg"
+                    alt="Назар Коваль"
                     class="img-employees"
-                  />
+                                       />
                   <p class="text-employees">
-                    Займається форбуванням корпусу авто понад 6 років
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="item-employees">
-                  <img
-                    src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
-                    class="img-employees"
-                  />
-                  <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="item-employees">
-                  <img
-                    src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
-                    class="img-employees"
-                  />
-                  <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="item-employees">
-                  <img
-                    src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
-                    class="img-employees"
-                  />
-                  <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
+                    Ремонт авто  з 11-м досвідом роботи
                   </p>
                 </div>
               </div>
@@ -261,13 +261,12 @@
               <div class="swiper-slide">
                 <div class="item-employees">
                   <img
-                    src="./images/2048x2048.jpg"
-                    alt="Олег Василенко"
+                    src="./images/Ігор-Пономар.jpg"
+                    alt="Ігор Пономар"
                     class="img-employees"
-                  />
+                                      />
                   <p class="text-employees">
-                    Прцівник, який займається ремонтом двигуна з 12 досвідом
-                    роботи
+                    Ремонт двигуна з 12 досвідом роботи
                   </p>
                 </div>
               </div>
@@ -392,6 +391,7 @@
       });
     </script>
     <script src="./js/our-customers.js"></script>
+    <script src="./js/benefits.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js"></script>
   </body>
